<resources>
    <string name="app_name">AFAN OROMO APPS FOR KIDS</string>
    <string name="action_settings">Settings</string>
    <string name="bgn">BAGA NAGAAN DHUFTAN!</string>
    <string name="gl">GALMEE</string>
    <string name="strt">SEENI</string>
    <string name="reg">GALMEEF</string>
    <string name="use">USERNAME</string>
    <string name="kgl">1 YKN 2 YKN 3 QOFA GALCHI</string>
    <string name="me">Register</string>
    <string name="jal">SEENUUF</string>
    <string name="user">USERNAME</string>
    <string name="seni">SEENI</string>
    <string name="mb">MAAL BARBAADDU?</string>
    <string name="br">BARNOOTA</string>
    <string name="qr">QORMAATA</string>
    <string name="tp">TAPHOOTA</string>
    <string name="qb">QABXII</string>
    <string name="oro">OROMIYAA</string>
    <string name="bgn1">BAGA NAGAAN DHUFTAN!</string>
    <string name="mb1">MAAL BARBAADDU?</string>
    <string name="br1">BARNOOTA</string>
    <string name="qr1">QORMAATA</string>
    <string name="tp1">TAPHOOTA</string>
    <string name="qb1">QABXII</string>
    <string name="oro1">OROMIYAA</string>
    <string name="bgn2">BAGA NAGAAN DHUFTAN!</string>
    <string name="mb2">MAAL BARBAADDU?</string>
    <string name="br2">BARNOOTA</string>
    <string name="qr2">QORMAATA</string>
    <string name="tp2">TAPHOOTA</string>
    <string name="qb2">QABXII</string>
    <string name="oro2">OROMIYAA</string>
    <string name="bnt">BARNOOTA</string>
    <string name="ao">AFAAN OROMOO</string>
    <string name="ma">HERREGAA</string>
    <string name="en">INGILIFFAA</string>
    <string name="kg1">BARATAA KG 1FFAA</string>
    <string name="k1le1">BARANNOO 1FFAA</string>
    <string name="k1le2">BARANNOO 2FFAA</string>
    <string name="k1le3">BARANNOO 3FFAA</string>
    <string name="k1le4">BARANNOO 4FFAA</string>
    <string name="k1le5">BARANNOO 5FFAA</string>
    <string name="tts01">SAGALEEN</string>
    <string name="vid01">VIIDIYOON</string>
    <string name="pic01">FAKKIIN</string>
    <string name="tts02">SAGALEEN</string>
    <string name="vid02">VIIDIYOON</string>
    <string name="pic02">FAKKIIN</string>
    <string name="tts03">SAGALEEN</string>
    <string name="vid03">VIIDIYOON</string>
    <string name="pic03">FAKKIIN</string>
    <string name="tts04">SAGALEEN</string>
    <string name="vid04">VIIDIYOON</string>
    <string name="pic04">FAKKIIN</string>
    <string name="afaan05">01 BARANNOO 5FFAA</string>
    <string name="tts05">BARREEFFAMA SAGALEETTI</string>
    <string name="vid05">VIIDIYOO HORDOFUUN</string>
    <string name="pic05">FAKKII ILAALUUN</string>
    <string name="kg2">BARATAA KG 2FFAA</string>
    <string name="k2le1">BARANNOO 1FFAA</string>
    <string name="k2le2">BARANNOO 2FFAA</string>
    <string name="k2le3">BARANNOO 3FFAA</string>
    <string name="k2le4">BARANNOO 4FFAA</string>
    <string name="afaan11">02 BARANNOO 1FFAA</string>
    <string name="tts11">BARREEFFAMA SAGALEETTI</string>
    <string name="vid11">VIIDIYOO HORDOFUUN</string>
    <string name="pic11">FAKKII ILAALUUN</string>
    <string name="afaan12">02 BARANNOO 2FFAA</string>
    <string name="tts12">BARREEFFAMA SAGALEETTI</string>
    <string name="vid12">VIIDIYOO HORDOFUUN</string>
    <string name="pic12">FAKKII ILAALUUN</string>
    <string name="afaan13">02 BARANNOO 3FFAA</string>
    <string name="tts13">BARREEFFAMA SAGALEETTI</string>
    <string name="vid13">VIIDIYOO HORDOFUUN</string>
    <string name="pic13">FAKKII ILAALUUN</string>
    <string name="afaan14">02 BARANNOO 4FFAA</string>
    <string name="tts14">BARREEFFAMA SAGALEETTI</string>
    <string name="vid14">VIIDIYOO HORDOFUUN</string>
    <string name="pic14">FAKKII ILAALUUN</string>
    <string name="afaan15">02 BARANNOO 5FFAA</string>
    <string name="tts15">BARREEFFAMA SAGALEETTI</string>
    <string name="vid15">VIIDIYOO HORDOFUUN</string>
    <string name="pic15">FAKKII ILAALUUN</string>
    <string name="afaan16">02 BARANNOO 6FFAA</string>
    <string name="tts16">BARREEFFAMA SAGALEETTI</string>
    <string name="vid16">VIIDIYOO HORDOFUUN</string>
    <string name="pic16">FAKKII ILAALUUN</string>
    <string name="afaan17">02 BARANNOO 7FFAA</string>
    <string name="tts17">BARREEFFAMA SAGALEETTI</string>
    <string name="vid17">VIIDIYOO HORDOFUUN</string>
    <string name="pic17">FAKKII ILAALUUN</string>
    <string name="afaan18">02 BARANNOO 8FFAA</string>
    <string name="tts18">BARREEFFAMA SAGALEETTI</string>
    <string name="vid18">VIIDIYOO HORDOFUUN</string>
    <string name="pic18">FAKKII ILAALUUN</string>
    <string name="afaan19">02 BARANNOO 9FFAA</string>
    <string name="tts19">BARREEFFAMA SAGALEETTI</string>
    <string name="vid19">VIIDIYOO HORDOFUUN</string>
    <string name="pic19">FAKKII ILAALUUN</string>
    <string name="kg3">BARATAA KG 3FFAA</string>
    <string name="k3le1">BARANNOO 1FFAA</string>
    <string name="k3le2">BARANNOO 2FFAA</string>
    <string name="k3le3">BARANNOO 3FFAA</string>
    <string name="k3le4">BARANNOO 4FFAA</string>
    <string name="k3le5">BARANNOO 5FFAA</string>
    <string name="afaan21">03 BARANNOO 1FFAA</string>
    <string name="tts21">BARREEFFAMA SAGALEETTI</string>
    <string name="vid21">VIIDIYOO HORDOFUUN</string>
    <string name="pic21">FAKKII ILAALUUN</string>
    <string name="afaan22">03 BARANNOO 2FFAA</string>
    <string name="tts22">BARREEFFAMA SAGALEETTI</string>
    <string name="vid22">VIIDIYOO HORDOFUUN</string>
    <string name="pic22">FAKKII ILAALUUN</string>
    <string name="afaan23">03 BARANNOO 3FFAA</string>
    <string name="tts23">BARREEFFAMA SAGALEETTI</string>
    <string name="vid23">VIIDIYOO HORDOFUUN</string>
    <string name="pic23">FAKKII ILAALUUN</string>
    <string name="afaan24">03 BARANNOO 4FFAA</string>
    <string name="tts24">BARREEFFAMA SAGALEETTI</string>
    <string name="vid24">VIIDIYOO HORDOFUUN</string>
    <string name="pic24">FAKKII ILAALUUN</string>
    <string name="afaan25">03 BARANNOO 5FFAA</string>
    <string name="tts25">BARREEFFAMA SAGALEETTI</string>
    <string name="vid25">VIIDIYOO HORDOFUUN</string>
    <string name="pic25">FAKKII ILAALUUN</string>
    <string name="afaan26">03 BARANNOO 6FFAA</string>
    <string name="tts26">BARREEFFAMA SAGALEETTI</string>
    <string name="vid26">VIIDIYOO HORDOFUUN</string>
    <string name="pic26">FAKKII ILAALUUN</string>
    <string name="afaan27">03 BARANNOO 7FFAA</string>
    <string name="tts27">BARREEFFAMA SAGALEETTI</string>
    <string name="vid27">VIIDIYOO HORDOFUUN</string>
    <string name="pic27">FAKKII ILAALUUN</string>
    <string name="afaan28">03 BARANNOO 8FFAA</string>
    <string name="tts28">BARREEFFAMA SAGALEETTI</string>
    <string name="vid28">VIIDIYOO HORDOFUUN</string>
    <string name="pic28">FAKKII ILAALUUN</string>
    <string name="afaan29">03 BARANNOO 9FFAA</string>
    <string name="tts29">BARREEFFAMA SAGALEETTI</string>
    <string name="vid29">VIIDIYOO HORDOFUUN</string>
    <string name="pic29">FAKKII ILAALUUN</string>
    <string name="res">QABXII BARNOOTA KAMII ILAALUU BARBAADDA?</string>
    <string name="are">QABXII BARNOOTA AFAAN OROMOO</string>
    <string name="ere">QABXII BARNOOTA HERREGAA</string>
    <string name="mre">QABXII BARNOOTA INGILIFFAA</string>
    <string name="aor">QABXII BARNOOTA AFAAN OROMOO</string>
    <string name="ba1">QABXII BARANNOO 1FFAA</string>
    <string name="ba2">QABXII BARANNOO 2FFAA</string>
    <string name="ba3">QABXII BARANNOO 3FFAA</string>
    <string name="ba4">QABXII BARANNOO 4FFAA</string>
    <string name="ba5">QABXII BARANNOO 5FFAA</string>
    <string name="tot">QABXII WALII GALAA</string>
    <string name="res1">QABXII BARNOOTA KAMII ILAALUU BARBAADDA?</string>
    <string name="are1">QABXII BARNOOTA AFAAN OROMOO</string>
    <string name="ere1">QABXII BARNOOTA HERREGAA</string>
    <string name="mre1">QABXII BARNOOTA INGILIFFAA</string>
    <string name="res2">QABXII BARNOOTA KAMII ILAALUU BARBAADDA?</string>
    <string name="are2">QABXII BARNOOTA AFAAN OROMOO</string>
    <string name="ere2">QABXII BARNOOTA HERREGAA</string>
    <string name="mre2">QABXII BARNOOTA INGILIFFAA</string>
    <string name="bnt1">BARNOOTA</string>
    <string name="ao1">AFAAN OROMOO</string>
    <string name="ma1">HERREGAA</string>
    <string name="en1">INGILIFFAA</string>
    <string name="bnt2">BARNOOTA</string>
    <string name="ao2">AFAAN OROMOO</string>
    <string name="ma2">HERREGAA</string>
    <string name="en2">INGILIFFAA</string>
    <string name="or">OROMIYAA</string>
    <string name="hp">BAKKEEWWAN SEENAA</string>
    <string name="uf">AADAA UFFANNAA</string>
    <string name="ny">AADAA NYAATAA</string>
    <string name="si">AADAA SIRBAA</string>
    <string name="sg">SIRNA GADAA</string>
    <string name="siirba">AADAA SIRBA OROMOO</string>
    <string name="shaa">SHAWAA</string>
    <string name="wgg">WALLAGGAA</string>
    <string name="jii">JIMMAA</string>
    <string name="haa">HARARGEE</string>
    <string name="baa">BAALEE</string>
    <string name="ass">ARSII</string>
    <string name="boo">BOORANAA</string>
    <string name="guu">GUJII</string>
    <string name="abbb">I/A/BOOR</string>
    <string name="kaa">KAMISEE</string>
    <string name="ars">SIRBA AADAA ARSII</string>
    <string name="arv">VIDEO</string>
    <string name="bas">SIRBA AADAA BAALEE</string>
    <string name="bav">VIDEO</string>
    <string name="bos">SIRBA AADAA BOORANAA</string>
    <string name="bov">VIDEO</string>
    <string name="gus">SIRBA AADAA GUJII</string>
    <string name="guv">VIDEO</string>
    <string name="has">SIRBA AADAA HARARGEE</string>
    <string name="hav">VIDEO</string>
    <string name="is">SIRBA AADAA ILUU ABBAA BOORAA</string>
    <string name="iv">VIDEO</string>
    <string name="jis">SIRBA AADAA JIMMAA</string>
    <string name="jiv">VIDEO</string>
    <string name="shs">SIRBA AADAA SHAWAA</string>
    <string name="shv">VIDEO</string>
    <string name="ks">SIRBA AADAA KAMISEE</string>
    <string name="kv">VIDEO</string>
    <string name="wls">SIRBA AADAA WALLAGGAA</string>
    <string name="wlv">VIDEO</string>
    <string name="ufata">AADAA UFFATA OROMOO</string>
    <string name="shaw">SHAWAA</string>
    <string name="wll">WALLAGGAA</string>
    <string name="jmm">JIMMAA</string>
    <string name="hrr">HARARGEE</string>
    <string name="bll">BAALEE</string>
    <string name="arr">ARSII</string>
    <string name="brr">BOORANAA</string>
    <string name="gjj">GUJII</string>
    <string name="abb">I/A/BOOR</string>
    <string name="kmm">KAMISEE</string>
    <string name="wrr">AADAA UFFATA ARSII</string>
    <string name="wrrv">VIIDIYOON</string>
    <string name="wrrp">FAKKIIN</string>
    <string name="wba">AADAA UFFATA BAALEE</string>
    <string name="wbav">VIIDIYOON</string>
    <string name="wbap">FAKKIIN</string>
    <string name="wbo">AADAA UFFATA BOORANAA</string>
    <string name="wbov">VIIDIYOON</string>
    <string name="wbop">FAKKIIN</string>
    <string name="wgu">AADAA UFFATA GUJII</string>
    <string name="wguv">VIIDIYOON</string>
    <string name="wgup">FAKKIIN</string>
    <string name="wha">AADAA UFFATA HARARGEE</string>
    <string name="whav">VIIDIYOON</string>
    <string name="qus11">GAAFFII</string>
    <string name="rba1">FILANNOO A</string>
    <string name="rbb1">FILANNOO B</string>
    <string name="rbc1">FILANNOO C</string>
    <string name="ntx">NEXT</string>
    <string name="debi">DEEBII</string>
    <string name="bzero">0</string>
    <string name="bone">1</string>
    <string name="btwo">2</string>
    <string name="bthree">3</string>
    <string name="bfour">4</string>
    <string name="bfive">5</string>
    <string name="bsix">6</string>
    <string name="bseven">7</string>
    <string name="beight">8</string>
    <string name="bnine">9</string>
    <string name="bequal">=</string>
    <string name="pls">+</string>
    <string name="sbt">-</string>
    <string name="mlt">*</string>
    <string name="dvi">/</string>
</resources>