<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bb99bb">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/debi"
        android:hint="@string/debi"
        android:gravity="center"
        android:textStyle="italic"
        android:textSize="30sp"
        android:layout_marginTop="10sp"/>

    <Button
        android:layout_width="65sp"
        android:layout_height="48sp"
        android:text="@string/bzero"
        android:id="@+id/bzero"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp" />

    <Button
        android:layout_width="65sp"
        android:layout_height="48sp"
        android:text="@string/bfour"
        android:id="@+id/bfour"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_below="@+id/bzero"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="65sp"
        android:layout_height="48sp"
        android:text="@string/beight"
        android:id="@+id/beight"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_below="@+id/bfour"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="65sp"
        android:layout_height="48sp"
        android:text="@string/btwo"
        android:id="@+id/btwo"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_alignTop="@+id/bone"
        android:layout_toEndOf="@+id/bone" />

    <Button
        android:layout_width="65sp"
        android:layout_height="48sp"
        android:text="@string/bsix"
        android:id="@+id/bsix"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_above="@+id/beight"
        android:layout_toEndOf="@+id/bfive" />

    <Button
        android:layout_width="65sp"
        android:layout_height="48sp"
        android:text="@string/bequal"
        android:id="@+id/bequal"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_alignTop="@+id/bnine"
        android:layout_toEndOf="@+id/bnine" />

    <Button
        android:layout_width="65sp"
        android:layout_height="48sp"
        android:text="@string/bone"
        android:id="@+id/bone"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_alignTop="@+id/bzero"
        android:layout_toEndOf="@+id/bzero" />

    <Button
        android:layout_width="65sp"
        android:layout_height="48sp"
        android:text="@string/bfive"
        android:id="@+id/bfive"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_alignTop="@+id/bfour"
        android:layout_toEndOf="@+id/bfour" />

    <Button
        android:layout_width="65sp"
        android:layout_height="48sp"
        android:text="@string/bnine"
        android:id="@+id/bnine"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_alignTop="@+id/beight"
        android:layout_toEndOf="@+id/beight" />

    <Button
        android:layout_width="65sp"
        android:layout_height="48sp"
        android:text="@string/bthree"
        android:id="@+id/bthree"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_above="@+id/bfour"
        android:layout_toEndOf="@+id/btwo" />

    <Button
        android:layout_width="65sp"
        android:layout_height="48sp"
        android:text="@string/bseven"
        android:id="@+id/bseven"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_alignTop="@+id/bsix"
        android:layout_toEndOf="@+id/bsix" />

    <Button
        android:layout_width="65sp"
        android:layout_height="48sp"
        android:text="@string/mlt"
        android:id="@+id/mlt"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_alignTop="@+id/bequal"
        android:layout_toEndOf="@+id/bequal" />

    <Button
        android:layout_width="65sp"
        android:layout_height="48sp"
        android:text="@string/pls"
        android:id="@+id/pls"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_alignTop="@+id/bthree"
        android:layout_toEndOf="@+id/bthree" />

    <Button
        android:layout_width="65sp"
        android:layout_height="48sp"
        android:text="@string/sbt"
        android:id="@+id/sbt"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_alignTop="@+id/bseven"
        android:layout_toEndOf="@+id/bseven" />

    <Button
        android:layout_width="65sp"
        android:layout_height="48sp"
        android:text="@string/dvi"
        android:id="@+id/dvi"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_alignTop="@+id/mlt"
        android:layout_toEndOf="@+id/mlt" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Balleessi"
        android:id="@+id/clear"
        android:layout_below="@+id/beight"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/dvi" />

</RelativeLayout>