<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#bb99bb">

    <Button
        android:layout_width="130sp"
        android:layout_height="60sp"
        android:text="@string/qus11"
        android:id="@+id/gaf21"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:id="@+id/gbp21"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="61dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gaa21"
            android:textStyle="bold"
            android:textSize="16sp"
            android:checked="true"
            android:text="@string/rba1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gab21"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/rbb1"
            android:layout_marginTop="30sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gac21"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/rbc1"
            android:layout_marginTop="30sp"/>

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ntx"
        android:id="@+id/gan21"
        android:background="@drawable/gradient"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>