<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bb99bb"
    android:id="@+id/afan1">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tts01"
        android:id="@+id/tts01"
        android:gravity="center"
        android:textSize="20sp"
        android:background="@drawable/gradient"
        android:textColor="#000000"
        android:layout_marginTop="40sp"
        android:layout_centerHorizontal="true"
        android:onClick="oneLessonOne"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vid01"
        android:id="@+id/vid01"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/gradient"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tts01"
        android:onClick="oneLessonOne"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pic01"
        android:id="@+id/pic01"
        android:gravity="center"
        android:textSize="20sp"
        android:background="@drawable/gradient"
        android:textColor="#000000"
        android:layout_marginTop="10sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/vid01"
        android:onClick="oneLessonOne"/>

</RelativeLayout>